[add] ajustes sobre la matris de prueba y mensaje de confirmacion de eliminar el borrador

--- a/src/app/modulos/carga-documentos/carga-documentos-noxml/carga-documentos-noxml.component.html
+++ b/src/app/modulos/carga-documentos/carga-documentos-noxml/carga-documentos-noxml.component.html
@@ -60,7 +60,7 @@
 
 <div class="row">
   <div class="col-sm-12 col-lg-9 col-xl-9" style="float: left;">
-    <app-detalle-oc-mx *ngIf="oc_valida" [orden_oc]="documento.orden_compra"></app-detalle-oc-mx>
+    <app-detalle-oc-mx *ngIf="oc_valida" [orden_oc]="documento.orden_compra" [usuario]="usuario"></app-detalle-oc-mx>
   </div>
 
   <div>
