--- a/src/app/modulos/carga-documentos/detalle-oc-mx/detalle-oc-mx.component.html
+++ b/src/app/modulos/carga-documentos/detalle-oc-mx/detalle-oc-mx.component.html
@@ -20,13 +20,13 @@
       <!-- <div class="col-lg-6 col-xl-4 mt-1">
         <strong>MONTO ANTICIPO: {{ orden_oc.importe_anticipo |  currency:'$' }} {{ orden_oc.moneda }} </strong>
       </div> -->
-      <div class="col-lg-6 col-xl-4 mt-1">
+      <div *ngIf="!usuario.proveedor" class="col-lg-6 col-xl-4 mt-1">
         <strong>MÉTODO DE PAGO: {{ orden_oc.metodo_pago }} </strong>
       </div>
-      <div class="col-lg-6 col-xl-4 mt-1">
+      <div *ngIf="!usuario.proveedor" class="col-lg-6 col-xl-4 mt-1">
         <strong>FORMA DE PAGO: {{ orden_oc.forma_pago }} </strong>
       </div>
-      <div class="col-lg-6 col-xl-4 mt-1">
+      <div *ngIf="!usuario.proveedor" class="col-lg-6 col-xl-4 mt-1">
         <strong>USO DE CFDI: {{ orden_oc.uso_cfdi }} </strong>
       </div>
       <div class="col-lg-6 col-xl-4 mt-1">
