--- a/src/app/compartidos/header-comprobacion/header-comprobacion.component.html
+++ b/src/app/compartidos/header-comprobacion/header-comprobacion.component.html
@@ -61,8 +61,9 @@
           <div class="col-md-4">
             <div class="form-group">
               <label for="tasa_cambio">Tasa de Cambio <span class="requerido">*</span> </label>
-              <input formControlName="tasa_cambio" currencyMask [options]="{ thousands: ',', decimal: '.' }" type="text"
-                class="form-control mayusculas" name="tasa_cambio" id="tasa_cambio" maxlength="8">
+              <input formControlName="tasa_cambio" currencyMask
+                [options]="{ thousands: ',', decimal: '.', precision: 4 }" type="text" class="form-control mayusculas"
+                name="tasa_cambio" id="tasa_cambio" maxlength="8">
             </div>
           </div>
           <div *ngIf="lista_documentos.length > 0" class="col-md-4">
