--- a/src/app/compartidos/header-comprobacion/header-comprobacion.component.html
+++ b/src/app/compartidos/header-comprobacion/header-comprobacion.component.html
@@ -44,7 +44,7 @@
           <div class="col-md-4">
             <div class="form-group">
               <label for="impuesto"> Impuesto </label>
-              <select2 [data]="[{id: 1, text:'IVA 0'}, {id: 2, text: 'Exento'}]"
+              <select2 [data]="[{id: 1, text:'Impuesto 0'}, {id: 2, text: 'Excento'}]"
                 [options]="{placeholder: 'Seleccione Impuesto...'}" (valueChanged)="selectTipoDocumento($event)"
                 name="impuesto" id="impuesto">
               </select2>
