--- a/src/app/modulos/listar-cfdi/filtros-cfdi/filtros-cfdi.component.html
+++ b/src/app/modulos/listar-cfdi/filtros-cfdi/filtros-cfdi.component.html
@@ -23,13 +23,13 @@
               name="select_sucursal" id="sel_sucursal">
             </select2>
           </div>
-          <div class="col-md-3 col-lg-3">
+          <!-- <div class="col-md-3 col-lg-3">
             <label class="label-control" for="movimiento">Tipo de Movimiento</label>
             <select2 [data]="lista_movimientos" [value]="tipo_doc_mov_default"
               [options]="{placeholder: 'Seleccione una Tipo de Movimiento'}"
               (valueChanged)="selectTipoMovimiento($event)" name="movimiento" id="movimiento">
             </select2>
-          </div>
+          </div> -->
           <div class="col-md-3 col-lg-3">
             <label class="label-control" for="documento">Tipo de Documento</label>
             <select2 [data]="lista_documentos" [value]="tipo_doc_mov_default"
